<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:layout_gravity="center"
    android:stretchColumns="*"
    >
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/editmyplace_name_label"
                />
            <EditText
                android:id="@+id/editmyplace_name_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/editmyplace_desc_label"
                />
            <EditText
                android:id="@+id/editmyplace_desc_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/editmyplace_lat_label"
                />
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editmyplace_lat_edit"
                />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/editmyplace_lon_label"
                />
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editmyplace_lon_edit"
                />
        </LinearLayout>

        <Button
            android:id="@+id/editmyplace_location_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/editmyplace_location_label"
            />
    </TableRow>
    
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        >
        <Button
            android:id="@+id/editmyplace_finished_button"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/editmyplace_cancel_button"
            android:layout_weight="1"
            android:text="Cancel"
            />

    </TableRow>

</TableLayout>